--- a/styles/body.css
+++ b/styles/body.css
@@ -3,44 +3,56 @@ p {
     margin-bottom: 0px;
 }
 
-.imageOne, .imageTwo {
+.imageOne,
+.imageTwo {
     width: 100%;
 }
 
 
-.tech, .MarkPic {
+.tech,
+.MarkPic {
     width: 100%;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 
-.right {
+.PichaiBlock,
+.MarkBlock {
     width: 100%;
     margin-top: 0px;
 
 }
 
-.talkingtech , .MarkWeb {
+.talkingtech,
+.MarkWeb {
     width: 100%;
     margin-top: 0px;
     border-radius: 50px;
+    cursor: pointer;
 
 }
 
+.MarkTitle,
 .talkingTitle {
     font-family: Roboto;
     font-weight: 500;
     font-size: 14px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
+.MarkName,
 .marqueeName {
     color: rgb(96, 96, 96);
     font-size: 13px;
     margin-bottom: 2px;
+    font-weight: 400;
 }
 
+.MarkViews,
 .threeViews {
     color: rgb(96, 96, 96);
     font-size: 13px;
+    font-weight: 400;
 }
