--- a/styles/header.css
+++ b/styles/header.css
@@ -1,34 +1,108 @@
 .head {
+    height: 60px;
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: rgb(230, 230, 230);
+}
+
+.hamburger {
+    margin-left: 10px;
+    margin-right: 25px;
+}
+
+.youTube {
+    margin-right: 30px;
+    width: 90px;
 }
 
 .MiddleHead {
     width: 600px;
+    height: 40px;
     display: flex;
     justify-content: center;
-    border-color: black;
-    border-style: solid;
+
+    align-items: center;
 }
 
 .SearchInput {
     margin-right: 65px;
     flex: 1;
     max-width: 350px;
+    width: 0;
+    height: 36px;
+    margin-left: 40px;
+    border-color: rgb(204, 204, 204);
+    border-style: solid;
+    border-radius: 4px;
+    border-width: 1px;
 
 }
 
-.LeftIcons{
+.SearchInput::placeholder{
+    font-size: 16px;
+    font-family: Roboto, Arial;
+    color: rgb(150, 150, 150);
+    padding-left: 10px;
+}
+
+.voice {
+    background-color: rgb(248, 248, 248);
+    border-radius: 20px;
+    width: 30px;
+    height: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.searching {
+    width: 65px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    margin-left: -67px;
+    border-width: 1px;
+    border-style: none;
+    background-color: rgb(247, 247, 247);
+    margin-right: 10px;    
+
+}
+
+.LeftIcons {
     width: 150px;
     display: flex;
     flex-shrink: 0;
 }
 
-.RightIcons{
+.RightIcons {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
     flex-shrink: 0;
-    width: 150px;
+    width: 220px;
     text-align: right;
+}
+
+.MarksLogo {
+    margin-left: 10px;
+    margin-right: 30px;
+    border-radius: 15px;
+}
+
+.notification,
+.apps {
+    margin-left: 10px;
+}
+
+.upload {
+    margin-left: 30px;
 }
