--- a/styles/header.css
+++ b/styles/header.css
@@ -12,11 +12,65 @@
     border-bottom-style: solid;
     border-bottom-width: 1px;
     border-bottom-color: rgb(230, 230, 230);
+    z-index: 100;
+}
+
+.notify {
+    position: absolute;
+    top: -1px;
+    right: -3px;
+    background-color: rgb(208, 0, 0);
+    color: white;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 1cap;
+    padding-bottom: 2px;
+    border-radius: 20px;
+    font-size: 10px;
+    font-style: bold;
+    font-family: Roboto;
+
 }
 
 .hamburger {
     margin-left: 25px;
     margin-right: 25px;
+    
+}
+
+.tool{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    white-space: nowrap;
+    cursor: pointer;
+    
+}
+
+
+.tool div{
+    position: absolute;
+    bottom: -40px;
+    color: white;
+    background-color: rgb(120, 120, 120);
+    font-size: 12px;
+    font-family: Roboto, Arial;
+    padding-right: 8px;
+    padding-left: 8px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.15s;
+}
+
+.tool:hover div{
+    opacity: 1;
+}
+
+.hamburger {
+    cursor: pointer;
 }
 
 .youTube {
@@ -42,17 +96,19 @@
     margin-left: 40px;
     border-color: rgb(204, 204, 204);
     border-style: solid;
-    border-radius: 4px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
     border-width: 1px;
     margin-left: 70px;
-
+    text-indent: 10px;
+    font-size: 17px;
 }
 
-.SearchInput::placeholder{
+.SearchInput::placeholder {
     font-size: 16px;
     font-family: Roboto, Arial;
     color: rgb(150, 150, 150);
-    padding-left: 10px;
+
 }
 
 .voice {
@@ -66,15 +122,19 @@
     padding-right: 5px;
 }
 
-.searching {
+.searches {
     width: 65px;
-    padding-top: 7px;
-    padding-bottom: 7px;
+    padding-top: 6px;
+    padding-bottom: 6px;
     margin-left: -67px;
     border-width: 1px;
-    border-style: none;
+    border-style: solid;
+    border-color: rgb(200, 200, 200);
+    height: 25px;
     background-color: rgb(247, 247, 247);
-    margin-right: 10px;    
+    margin-right: 10px;
+    cursor: pointer;
+
 
 }
 
@@ -85,18 +145,27 @@
 }
 
 .RightIcons {
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-shrink: 0;
     width: 220px;
     text-align: right;
+
 }
 
 .MarksLogo {
+    border-radius: 20px;
     margin-left: 10px;
     margin-right: 30px;
-    border-radius: 15px;
+    border-radius: 20px;
+}
+
+.youTube-Logo {
+    display: flex;
+    align-items: center;
+    height: 40px;
 }
 
 .notification,
