--- a/styles/body.css
+++ b/styles/body.css
@@ -1,13 +1,34 @@
-.imageOne,
-.imageTwo {
+.video-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 15px;
+    row-gap: 10px;
+}
+
+@media (max-width: 870px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 871px) and (max-width: 1100px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1101px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
+}
+
+.unit{
     width: 100%;
 }
 
-
-.Mark-Time,
-.Talking-Time,
-.Sniper-Time,
-.V-Time{
+.Talking-Time{
     position: absolute;
     background-color: black;
     color: white;
@@ -22,23 +43,20 @@
 
 }
 
-.tech,
-.MarkPic {
+.video-image{
     width: 100%;
     margin-bottom: 10px;
     cursor: pointer;
 }
 
 
-.PichaiBlock,
-.MarkBlock {
+.Block-info {
     width: 100%;
     margin-top: 0px;
 
 }
 
-.talkingtech,
-.MarkWeb {
+.full-size-image {
     width: 100%;
     margin-top: 0px;
     border-radius: 50px;
@@ -48,19 +66,18 @@
 
 }
 
-.MarkTitle,
-.talkingTitle {
+.VideoTitle {
     font-family: Roboto;
     font-weight: 500;
     font-size: 14px;
     cursor: pointer;
     margin-top: 0px;
     margin-bottom: 0px;
-
+    color: black;
+    
 }
 
-.MarkName,
-.marqueeName {
+.Name {
     color: rgb(96, 96, 96);
     font-size: 13px;
     margin-bottom: 2px;
@@ -72,12 +89,11 @@
 
 }
 
-.MarkViews,
-.threeViews {
+.Views{
     color: rgb(96, 96, 96);
     font-size: 13px;
     font-weight: 400;
     margin-top: 0px;
     margin-bottom: 0px;
+    
 }
-
