--- a/styles/profile.css
+++ b/styles/profile.css
@@ -14,23 +14,33 @@
 
 .profiletool1{
     display: flex;
-    width: 210px;
-    height: 70px;
+    width: 230px;
+    height: 75px;
     background-color: white;
     align-items: center;
     flex-direction: row;
-    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.7);
     border-radius: 4px;
     border-width: 1px;
     margin-top: 10px;
 }
 
-.smallMark{
+.small-image-hover{
     width: 100%;
     border-radius: 50px;
+    margin-left: 10px;
 }
 
-.profiletool1 p{
+
+
+.sub-one{
+    color: rgb(73, 73, 73);
+    font-size: 13px;
+    font-family: Roboto, Arial;
+}
+
+.name-one{
     color: black;
     font-family: Roboto, Arial;
+    font-weight: 500;
 }
