--- a/styles/body.css
+++ b/styles/body.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 15px;
-    row-gap: 10px;
+    row-gap: 40px;
 }
 
 @media (max-width: 870px) {
@@ -67,33 +67,33 @@
 }
 
 .VideoTitle {
-    font-family: Roboto;
+    font-family: Roboto, Arial;
     font-weight: 500;
     font-size: 14px;
     cursor: pointer;
     margin-top: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 12px;
     color: black;
     
 }
 
 .Name {
     color: rgb(96, 96, 96);
-    font-size: 13px;
+    font-size: 12px;
     margin-bottom: 2px;
     font-weight: 400;
     margin-top: 0px;
     margin-bottom: 0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    font-family: Roboto, Arial;
 
 }
 
 .Views{
     color: rgb(96, 96, 96);
-    font-size: 13px;
+    font-size: 12px;
     font-weight: 400;
-    margin-top: 0px;
+    margin-top: 5px;
     margin-bottom: 0px;
-    
+    font-family: Roboto, Arial;
+
 }
