--- a/styles/header.css
+++ b/styles/header.css
@@ -35,21 +35,21 @@
 .hamburger {
     margin-left: 25px;
     margin-right: 25px;
-    
+
 }
 
-.tool{
+.tool {
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     white-space: nowrap;
     cursor: pointer;
-    
+
 }
 
 
-.tool div{
+.tool div {
     position: absolute;
     bottom: -40px;
     color: white;
@@ -65,7 +65,7 @@
     transition: opacity 0.15s;
 }
 
-.tool:hover div{
+.tool:hover div {
     opacity: 1;
 }
 
@@ -144,23 +144,6 @@
     flex-shrink: 0;
 }
 
-.RightIcons {
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-shrink: 0;
-    width: 220px;
-    text-align: right;
-
-}
-
-.MarksLogo {
-    border-radius: 20px;
-    margin-left: 10px;
-    margin-right: 30px;
-    border-radius: 20px;
-}
 
 .youTube-Logo {
     display: flex;
@@ -175,4 +158,31 @@
 
 .upload {
     margin-left: 30px;
+}
+
+.Personal-profile {
+    display: flex;
+    align-items: center;
+    width: 40px;
+    height: 70px;
+    margin-right: 20px;
+    justify-content: center;
+}
+
+.MarksLogo {
+    width: 65%;
+    height: 100px;
+    cursor: pointer;
+    border-radius: 100px;
+}
+
+.RightIcons {
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-shrink: 0;
+    width: 220px;
+    text-align: right;
+
 }
